# SHubCrawler

./: .gitignore  README.md  build.bat  build.sh
shubcrawler/: file.py
shubcrawler-gui/: __main__.py
src/shubcrawler/: grabber.py  proxy.py  pyproject.toml  urlparse.py
src/shubcrawler-gui/: form.ui  pyproject.toml  widget.py
