[tool.poetry]
name = "shubcrawler-gui"
version = "0.1.0"
description = "Front-end for shubcrawler, written using PySide6"
authors = ["tretrauit <tretrauit@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
PySide6 = "^6.3.1"

[tool.poetry.dev-dependencies]
nuitka = ">=0.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
