[tool.poetry]
name = "shubcrawler"
version = "0.1.0"
description = "An application that lets you get test documents from SHub"
authors = ["tretrauit <tretrauit@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
mitmproxy = "^8.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
